# CodeTrace-ai

./: .gitignore  COMMANDS.md  CONTRIBUTING.md  README.md  requirements.txt
Codetrace-ai/: README.md  pyproject.toml
Codetrace-ai/codetrace_mcp/: server.py
Codetrace-ai/src/: file_extension.py
Codetrace-ai/src/backend/: chat_store.py  vector_store.py
Codetrace-ai/src/cli/: config_helpers.py  main.py  project_helpers.py  ui_helpers.py
Codetrace-ai/src/core/agents/: retriever.py  tools.py
Codetrace-ai/src/core/database/: db_utils.py  sync_manager.py
Codetrace-ai/src/core/graph/: builder.py  orchestrator.py
Codetrace-ai/src/core/parser/: ast_utility.py  parser.py
Codetrace-ai/src/core/parser/queries/: c.scm  cpp.scm  css.scm  dart.scm  go.scm  html.scm  java.scm  json.scm  php.scm  python.scm  rust.scm  tsx.scm
tests/: legacy.cpp  test_parser.py  test_parser_visual.py
website/: index.html  script.js  styles.css
